changing the feature-a

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Olá Mundo!</h1>
+  <h1>tô mudando a feature a</h1>
   <h2>mudanças na branch 2</h2>
   <h3>mudanças na branch 3</h3>
 </body>
